<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_registration.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="602dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.732">

            <TextView
                android:id="@+id/tv_registration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registration"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_registration_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="dylansalim3@gmail.com" />

            <EditText
                android:id="@+id/et_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="test123" />

            <EditText
                android:id="@+id/et_registration_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:imeActionLabel="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="test123" />

            <Spinner
                android:id="@+id/sp_role"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/et_registration_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeActionLabel="@string/phone_number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/et_registration_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:imeActionLabel="@string/address"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/et_registration_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:imeActionLabel="@string/first_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/et_registration_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:imeActionLabel="@string/last_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/tv_register_login_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_here"
                android:textAlignment="center"
                android:textColor="@color/colorLink" />

            <Button
                android:id="@+id/btn_registration_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/register" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>