<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_item_form.NewItemFormActivity">

    <Button
        android:id="@+id/btn_new_item_form_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconTint="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="90dp"/>

    <ScrollView
        android:id="@+id/scrollView_new_item_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ll_new_item_form"
            android:layout_width="match_parent"
            android:layout_height="564dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TitleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_item"
                app:layout_anchor="@+id/ll_new_item_form"
                app:layout_anchorGravity="center"/>

            <ImageView
                android:id="@+id/iv_avatar_new_item"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="TODO" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_item_form_item_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_item_form_item_desc"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_desc"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_item_form_item_price"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_price"
                    android:digits="0123456789."
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_item_form_item_promo_price"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:visibility="gone"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_promo_price"
                    android:digits="0123456789."
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_new_item_is_promo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isPromo" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_new_item_is_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended" />


            <Button
                android:id="@+id/btn_new_item_form_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>