<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.store_registration.StoreRegistrationActivity">

    <Button
        android:id="@+id/btn_store_registration_back"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconTint="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_store_registration"
        android:layout_width="291dp"
        android:text="@string/store_registration"
        android:layout_height="44dp"
        style="@style/TitleTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <LinearLayout
        android:id="@+id/ll_store_registration"
        android:layout_width="289dp"
        android:layout_height="438dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_store_registration"
        app:layout_constraintVertical_bias="0.16">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_store_registration_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_name"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_store_registration_phone_number"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_store_registration_address"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:lines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_store_registration_postal_code"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/poscode"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_store_registration_city"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:maxLines="1"
                app:boxBackgroundColor="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textPostalAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_store_registration_country"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/transparent"
            android:maxLines="1"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_store_registration_current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_store_registration_submit"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:background="@drawable/btn_gradient_style"
        android:text="@string/register"
        android:textSize="14sp"
        app:fontFamily="@font/proxima_nova_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_store_registration"
        app:layout_constraintVertical_bias="0.588"
        app:rippleColor="@color/colorAccent" />


</androidx.constraintlayout.widget.ConstraintLayout>